Fix word highlight sync drift on long passages

--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 
   <!-- SCREEN: Pick (Kid Launchpad) -->
   <div class="screen active" id="screen-pick">
-    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD M</div>
+    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD N</div>
     <!-- Kid-Friendly Action Buttons -->
     <div style="display:flex;flex-direction:column;gap:12px;">
       <!-- Read a Story — ORANGE (primary action) -->
@@ -1623,7 +1623,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
         <div id="wpm-time-bar" style="height:100%;width:100%;background:linear-gradient(90deg,var(--green),#81C784);border-radius:8px;transition:width 1s linear;"></div>
       </div>
       <div class="encouragement" id="wpm-read-tip" style="margin-bottom:10px;">Read out loud! Keep going until time is up.</div>
-      <div id="wpm-story-scroll" style="max-height:50vh;overflow-y:auto;margin:8px 0;scroll-behavior:smooth;overscroll-behavior:contain;">
+      <div id="wpm-story-scroll" style="margin:8px 0;">
         <div id="wpm-story-text" style="font-size:1.3rem;line-height:2.1rem;color:var(--ink);font-weight:700;"></div>
       </div>
       <button class="btn-main btn-outline" id="btn-wpm-cancel" style="margin-top:10px;">← Stop &amp; Go Back</button>
@@ -1637,7 +1637,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
       <div class="encouragement" style="margin-bottom:10px;background:linear-gradient(135deg, #FFF3E8, #FFE8D5);font-size:1rem;">
         👆 <strong>Tap the last word you read</strong>
       </div>
-      <div id="wpm-tap-scroll" style="max-height:55vh;overflow-y:auto;margin:8px 0;scroll-behavior:smooth;overscroll-behavior:contain;">
+      <div id="wpm-tap-scroll" style="margin:8px 0;">
         <div id="wpm-tap-text" style="font-size:1.3rem;line-height:2.2rem;color:var(--ink);font-weight:700;"></div>
       </div>
       <button class="btn-main btn-outline" id="btn-wpm-tap-cancel" style="margin-top:10px;">← I Don't Remember</button>
@@ -1702,7 +1702,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 <footer>
   <strong>ReadUp!</strong> &nbsp;|&nbsp; Made with 💛 for kids everywhere<br>
   <span class="foot-sub">A Transforming Youth, Inc. Program &nbsp;·&nbsp; ✨ Inspired by Kamryn &amp; Christopher II ✨</span><br>
-  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD M</span>
+  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD N</span>
 </footer>
 
 <!-- Fixed bottom bar for parent access -->
