--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@ input[type=range].speed-slider::-webkit-slider-thumb:hover { border-color: var(-
 .spin-circle { width: 52px; height: 52px; border-radius: 50%; border: 6px solid var(--border); border-top-color: var(--purple); animation: spin 0.8s linear infinite; margin: 0 auto 14px; }
 @keyframes spin { to { transform: rotate(360deg); } }
 .spin-label { font-family: 'Fredoka'; font-size: 1.2rem; color: var(--purple); }
+@keyframes loadDot { 0%, 80%, 100% { transform: scale(0.4); opacity: 0.3; } 40% { transform: scale(1); opacity: 1; } }
 .ai-badge { display: inline-block; background: linear-gradient(135deg, var(--purple), var(--purple-deep)); color: white; font-size: 0.65rem; font-weight: 800; letter-spacing: 1px; padding: 3px 10px; border-radius: 20px; text-transform: uppercase; margin-left: 8px; vertical-align: middle; }
 
 .hint-tip { text-align: center; font-size: 0.85rem; color: var(--purple-deep); font-weight: 800; margin: 10px 0; padding: 10px 14px; background: linear-gradient(135deg, #fff3e8, #ffe8d5); border: 2px solid var(--purple-light); border-radius: 14px; box-shadow: 0 2px 8px rgba(200,120,50,0.1); }
@@ -925,7 +926,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 
   <!-- SCREEN: Pick (Kid Launchpad) -->
   <div class="screen active" id="screen-pick">
-    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD N</div>
+    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD P</div>
     <!-- Kid-Friendly Action Buttons -->
     <div style="display:flex;flex-direction:column;gap:12px;">
       <!-- Read a Story — ORANGE (primary action) -->
@@ -1125,8 +1126,67 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 
   <!-- SCREEN: Loading -->
   <div class="screen" id="screen-loading">
-    <div class="card">
-      <div class="spinner"><div class="spin-circle"></div><div class="spin-label" id="loading-msg">Getting your story ready...</div></div>
+    <div class="card" style="text-align:center;padding:30px 20px;">
+      <!-- Bookie reading a book -->
+      <div id="loading-bookie" style="margin:0 auto 8px;">
+        <svg width="120" height="110" viewBox="0 0 120 110">
+          <!-- Body -->
+          <ellipse cx="60" cy="68" rx="32" ry="30" fill="#FF9F43"/>
+          <ellipse cx="60" cy="68" rx="28" ry="26" fill="#FFCC80"/>
+          <!-- Eyes -->
+          <circle cx="48" cy="55" r="13" fill="white" stroke="#5D4037" stroke-width="1.5"/>
+          <circle cx="72" cy="55" r="13" fill="white" stroke="#5D4037" stroke-width="1.5"/>
+          <circle cx="50" cy="55" r="6" fill="#5D4037">
+            <animate attributeName="cx" values="50;53;50;47;50" dur="3s" repeatCount="indefinite"/>
+          </circle>
+          <circle cx="74" cy="55" r="6" fill="#5D4037">
+            <animate attributeName="cx" values="74;77;74;71;74" dur="3s" repeatCount="indefinite"/>
+          </circle>
+          <circle cx="51" cy="53" r="2" fill="white"/>
+          <circle cx="75" cy="53" r="2" fill="white"/>
+          <!-- Glasses -->
+          <circle cx="48" cy="55" r="14" fill="none" stroke="#8E44AD" stroke-width="2"/>
+          <circle cx="72" cy="55" r="14" fill="none" stroke="#8E44AD" stroke-width="2"/>
+          <line x1="62" y1="55" x2="58" y2="55" stroke="#8E44AD" stroke-width="2"/>
+          <!-- Beak -->
+          <polygon points="56,66 64,66 60,72" fill="#E17055"/>
+          <!-- Ear tufts -->
+          <polygon points="38,38 42,20 48,42" fill="#FF9F43"/>
+          <polygon points="82,38 78,20 72,42" fill="#FF9F43"/>
+          <!-- Book in hands -->
+          <rect x="32" y="80" width="24" height="18" rx="2" fill="#54A0FF" transform="rotate(-10,44,89)"/>
+          <rect x="64" y="80" width="24" height="18" rx="2" fill="#5CD85A" transform="rotate(10,76,89)"/>
+          <line x1="56" y1="78" x2="56" y2="98" stroke="#5D4037" stroke-width="1.5"/>
+          <!-- Page lines -->
+          <line x1="38" y1="84" x2="50" y2="83" stroke="white" stroke-width="1" opacity="0.6"/>
+          <line x1="38" y1="87" x2="50" y2="86" stroke="white" stroke-width="1" opacity="0.6"/>
+          <line x1="38" y1="90" x2="48" y2="89" stroke="white" stroke-width="1" opacity="0.6"/>
+          <line x1="62" y1="83" x2="82" y2="84" stroke="white" stroke-width="1" opacity="0.6"/>
+          <line x1="62" y1="86" x2="82" y2="87" stroke="white" stroke-width="1" opacity="0.6"/>
+          <line x1="62" y1="89" x2="78" y2="90" stroke="white" stroke-width="1" opacity="0.6"/>
+          <!-- Sparkles -->
+          <text x="18" y="45" font-size="14" opacity="0.8">
+            ✨
+            <animate attributeName="opacity" values="0.3;1;0.3" dur="2s" repeatCount="indefinite"/>
+          </text>
+          <text x="95" y="40" font-size="12" opacity="0.6">
+            ⭐
+            <animate attributeName="opacity" values="0.6;1;0.6" dur="1.8s" repeatCount="indefinite" begin="0.5s"/>
+          </text>
+          <text x="8" y="75" font-size="10" opacity="0.5">
+            ✨
+            <animate attributeName="opacity" values="0.2;0.8;0.2" dur="2.2s" repeatCount="indefinite" begin="1s"/>
+          </text>
+        </svg>
+      </div>
+      <!-- Rotating message -->
+      <div id="loading-msg" style="font-family:'Fredoka',sans-serif;font-size:1.15rem;font-weight:700;color:var(--purple);min-height:2.5em;transition:opacity 0.3s;">Getting your story ready...</div>
+      <!-- Subtle progress dots -->
+      <div id="loading-dots" style="display:flex;justify-content:center;gap:8px;margin-top:12px;">
+        <div style="width:10px;height:10px;border-radius:50%;background:var(--purple);animation:loadDot 1.4s infinite ease-in-out;"></div>
+        <div style="width:10px;height:10px;border-radius:50%;background:var(--purple);animation:loadDot 1.4s infinite ease-in-out;animation-delay:0.2s;"></div>
+        <div style="width:10px;height:10px;border-radius:50%;background:var(--purple);animation:loadDot 1.4s infinite ease-in-out;animation-delay:0.4s;"></div>
+      </div>
     </div>
   </div>
 
@@ -1702,7 +1762,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 <footer>
   <strong>ReadUp!</strong> &nbsp;|&nbsp; Made with 💛 for kids everywhere<br>
   <span class="foot-sub">A Transforming Youth, Inc. Program &nbsp;·&nbsp; ✨ Inspired by Kamryn &amp; Christopher II ✨</span><br>
-  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD N</span>
+  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD P</span>
 </footer>
 
 <!-- Fixed bottom bar for parent access -->
@@ -3430,11 +3490,61 @@ function cleanStoryText(text) {
 }
 
 // ── Load story ────────────────────────────────────────────
+// ── Loading screen rotating messages ──────────────────────
+let loadingMsgInterval = null;
+
+const TOPIC_LOADING_MESSAGES = {
+  animals: ['🐾 Finding the perfect animal...', '🐱 Adding some furry friends...'],
+  space: ['🚀 Launching into space...', '🌟 Adding stars and planets...'],
+  dinosaurs: ['🦕 Waking up the dinosaurs...', '🌋 Setting the scene...'],
+  ocean: ['🐠 Diving under the sea...', '🌊 Making some waves...'],
+  superheroes: ['🦸 Calling all heroes...', '💥 Adding superpowers...'],
+  magic: ['🪄 Casting a spell...', '✨ Sprinkling some magic...'],
+  sports: ['⚽ Getting the game ready...', '🏃 Warming up the players...'],
+  cooking: ['🍳 Preheating the oven...', '🥄 Mixing the ingredients...'],
+  friends: ['👫 Gathering some friends...', '😊 Planning a fun day...'],
+  confidence: ['💪 Building some courage...', '⭐ Making someone brave...'],
+  blackhistory: ['📚 Opening the history books...', '✊ Finding a true hero...'],
+  helpers: ['🚒 Calling the helpers...', '👨‍⚕️ Getting ready to help...'],
+  nature: ['🌳 Growing some trees...', '☀️ Bringing out the sun...'],
+  emotions: ['💛 Finding the right feelings...', '🌈 Adding some heart...'],
+  trucks: ['🚛 Revving the engine...', '🛞 Loading up the truck...'],
+  princesses: ['👑 Opening the castle gates...', '🏰 Preparing the kingdom...'],
+  robots: ['🤖 Powering up the robot...', '⚡ Charging the circuits...'],
+  pirates: ['🏴‍☠️ Setting sail...', '🗺️ Finding the treasure map...'],
+  airplanes: ['✈️ Preparing for takeoff...', '☁️ Clearing the runway...']
+};
+
+function startLoadingMessages(topic) {
+  stopLoadingMessages();
+  const msgEl = document.getElementById('loading-msg');
+  const topicMsgs = TOPIC_LOADING_MESSAGES[topic] || ['📖 Crafting something special...'];
+  const allMsgs = [
+    '✨ Writing your story...',
+    ...topicMsgs,
+    '📖 Almost ready...',
+    '⭐ Making it just right for you!'
+  ];
+  let idx = 0;
+  msgEl.textContent = allMsgs[0];
+  loadingMsgInterval = setInterval(() => {
+    idx = (idx + 1) % allMsgs.length;
+    msgEl.style.opacity = '0';
+    setTimeout(() => {
+      msgEl.textContent = allMsgs[idx];
+      msgEl.style.opacity = '1';
+    }, 300);
+  }, 2000);
+}
+
+function stopLoadingMessages() {
+  if (loadingMsgInterval) { clearInterval(loadingMsgInterval); loadingMsgInterval = null; }
+}
+
 async function loadStory() {
   show('screen-loading');
-  const loadingMsg = document.getElementById('loading-msg');
+  startLoadingMessages(S.category);
   try {
-    loadingMsg.textContent = '✨ Writing your story with AI...';
     const aiTimeout = new Promise((_, reject) =>
       setTimeout(() => reject(new Error('timeout')), 15000)
     );
@@ -3449,13 +3559,12 @@ async function loadStory() {
     recordStoryStart();
   } catch (err) {
     console.warn('AI generation failed, using fallback:', err);
-    loadingMsg.textContent = 'Getting your story ready...';
     const s = getStory(S.category, S.grade, S.wordTarget);
     S.storyTitle = s.title; S.story = s.body; S.isAIStory = false;
     recordStoryStart();
   }
+  stopLoadingMessages();
   if (S.myRole === 'host') {
-    // This shouldn't happen anymore (Read Together uses content picker), but just in case
     createRoom();
   } else {
     setupReadScreen(); show('screen-read');
@@ -4187,7 +4296,7 @@ async function startWPMRead() {
   } else {
     // Need a longer passage — generate one
     show('screen-loading');
-    document.getElementById('loading-msg').textContent = '✨ Making a longer passage for your timed reading...';
+    startLoadingMessages(S.category);
     try {
       const aiTimeout = new Promise((_, reject) => setTimeout(() => reject(new Error('timeout')), 20000));
       const aiText = await Promise.race([
@@ -4452,7 +4561,7 @@ document.getElementById('btn-timed-source-back').addEventListener('click', () =>
 // Source picker: AI passage
 document.getElementById('btn-timed-ai').addEventListener('click', async () => {
   show('screen-loading');
-  document.getElementById('loading-msg').textContent = '✨ Creating your reading passage...';
+  startLoadingMessages('animals');
   try {
     // Pick a random topic for variety
     const topics = ['animals','space','dinosaurs','ocean','superheroes','magic','sports','cooking','friends','nature'];
