--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 
   <!-- SCREEN: Pick (Kid Launchpad) -->
   <div class="screen active" id="screen-pick">
-    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD P</div>
+    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD R</div>
     <!-- Kid-Friendly Action Buttons -->
     <div style="display:flex;flex-direction:column;gap:12px;">
       <!-- Read a Story — ORANGE (primary action) -->
@@ -994,14 +994,17 @@ body.bedtime .read-side-btn { opacity: 0.8; }
         <button class="story-size-btn" data-words="50">
           <svg viewBox="0 0 40 50" width="36" height="44"><rect x="6" y="8" width="28" height="34" rx="3" fill="var(--gold)" opacity="0.85"/><rect x="8" y="10" width="24" height="30" rx="2" fill="#FFF8E1"/><line x1="12" y1="18" x2="28" y2="18" stroke="var(--border)" stroke-width="1.5"/><line x1="12" y1="24" x2="24" y2="24" stroke="var(--border)" stroke-width="1.5"/></svg>
           <span>Quick</span>
+          <span style="font-size:0.6rem;color:var(--muted);font-weight:700;margin-top:-2px;">30–60 words</span>
         </button>
         <button class="story-size-btn sel-size" data-words="100">
           <svg viewBox="0 0 44 56" width="40" height="50"><rect x="6" y="6" width="32" height="42" rx="3" fill="var(--green)" opacity="0.85"/><rect x="8" y="8" width="28" height="38" rx="2" fill="#F1FFF1"/><line x1="12" y1="16" x2="32" y2="16" stroke="var(--border)" stroke-width="1.5"/><line x1="12" y1="22" x2="30" y2="22" stroke="var(--border)" stroke-width="1.5"/><line x1="12" y1="28" x2="28" y2="28" stroke="var(--border)" stroke-width="1.5"/><line x1="12" y1="34" x2="26" y2="34" stroke="var(--border)" stroke-width="1.5"/></svg>
           <span>Regular</span>
+          <span style="font-size:0.6rem;color:var(--muted);font-weight:700;margin-top:-2px;">80–120 words</span>
         </button>
         <button class="story-size-btn" data-words="300">
           <svg viewBox="0 0 50 64" width="44" height="56"><rect x="6" y="4" width="38" height="54" rx="3" fill="var(--ocean)" opacity="0.85"/><rect x="8" y="6" width="34" height="50" rx="2" fill="#EFF7FF"/><line x1="12" y1="14" x2="38" y2="14" stroke="var(--border)" stroke-width="1.5"/><line x1="12" y1="20" x2="36" y2="20" stroke="var(--border)" stroke-width="1.5"/><line x1="12" y1="26" x2="34" y2="26" stroke="var(--border)" stroke-width="1.5"/><line x1="12" y1="32" x2="36" y2="32" stroke="var(--border)" stroke-width="1.5"/><line x1="12" y1="38" x2="32" y2="38" stroke="var(--border)" stroke-width="1.5"/><line x1="12" y1="44" x2="34" y2="44" stroke="var(--border)" stroke-width="1.5"/></svg>
           <span>Long</span>
+          <span style="font-size:0.6rem;color:var(--muted);font-weight:700;margin-top:-2px;">250–350 words</span>
         </button>
       </div>
       <!-- Hidden original words row for JS compatibility -->
@@ -1412,7 +1415,6 @@ body.bedtime .read-side-btn { opacity: 0.8; }
           <div class="reread-dot" id="dot-3" style="opacity:0.25;">📖</div>
         </div>
         <button class="btn-main btn-green" id="btn-solo-retry" style="font-size:1.2rem;padding:16px;">▶ Read Again</button>
-        <button class="btn-main btn-coral" id="btn-solo-wpm" style="margin-top:10px;font-size:1.1rem;">⏱ Time My Reading!</button>
         <button class="btn-main btn-purple" id="btn-solo-wordbank" style="margin-top:10px;font-size:1.1rem;">📖 Word Bank</button>
         <button class="btn-main btn-outline" id="btn-solo-new" style="margin-top:10px;">📚 New Story</button>
       </div>
@@ -1706,45 +1708,73 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 
   <!-- SCREEN: WPM Results -->
   <div class="screen" id="screen-wpm-results">
-    <div class="card" style="text-align:center;">
-      <div class="card-title">⏱ Your Timed Score!</div>
-      <div class="wpm-result-big" id="wpm-result-number">0</div>
-      <div class="wpm-result-unit">Words Per Minute</div>
-      <div id="wpm-read-summary" style="font-size:0.92rem;font-weight:800;color:var(--muted);margin-top:6px;"></div>
-      <div id="wpm-improvement-badge"></div>
-
-      <!-- Visual benchmark bar -->
-      <div id="wpm-visual-benchmark" style="margin:16px 0 8px;">
-        <div class="wpm-benchmark-label" id="wpm-benchmark-label" style="margin-bottom:6px;">1st Grade Goal</div>
-        <div style="position:relative;height:32px;background:var(--section);border-radius:16px;overflow:visible;margin:0 4px;">
-          <!-- Goal range shading -->
-          <div id="wpm-goal-range-bar" style="position:absolute;top:0;height:100%;background:linear-gradient(90deg, #C8E6C9, #81C784);border-radius:16px;"></div>
-          <!-- Score marker -->
-          <div id="wpm-score-marker" style="position:absolute;top:-6px;width:4px;height:44px;background:var(--purple);border-radius:4px;transition:left 0.8s cubic-bezier(0.34,1.56,0.64,1);"></div>
+    <div class="card" style="text-align:center;overflow:hidden;position:relative;">
+      <!-- Confetti canvas -->
+      <canvas id="wpm-confetti-canvas" style="position:absolute;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:1;"></canvas>
+      <div style="position:relative;z-index:2;">
+        <!-- Bookie celebrating with stopwatch -->
+        <div id="wpm-result-mascot" style="margin:0 auto 4px;">
+          <svg viewBox="0 0 100 90" width="90" height="82" style="animation:mascotWiggle 1.5s ease-in-out infinite;">
+            <ellipse cx="50" cy="55" rx="28" ry="30" fill="#FECA57"/>
+            <ellipse cx="50" cy="62" rx="18" ry="15" fill="#FFF9E6"/>
+            <circle cx="38" cy="38" r="10" fill="white"/><circle cx="62" cy="38" r="10" fill="white"/>
+            <circle cx="39" cy="39" r="6" fill="#2C3E50"/><circle cx="61" cy="39" r="6" fill="#2C3E50"/>
+            <circle cx="40" cy="37" r="2.5" fill="white"/><circle cx="62" cy="37" r="2.5" fill="white"/>
+            <path d="M44 48 L50 55 L56 48Z" fill="#FF6B35"/>
+            <path d="M40 58 Q50 68 60 58" fill="none" stroke="#E17055" stroke-width="2.5" stroke-linecap="round"/>
+            <path d="M28 28 L22 12 L36 25Z" fill="#FF9F43"/>
+            <path d="M72 28 L78 12 L64 25Z" fill="#FF9F43"/>
+            <!-- Arms raised -->
+            <path d="M22 50 Q12 35 18 25" stroke="#FF9F43" stroke-width="5" stroke-linecap="round" fill="none"/>
+            <path d="M78 50 Q88 35 82 25" stroke="#FF9F43" stroke-width="5" stroke-linecap="round" fill="none"/>
+            <!-- Stopwatch in right hand -->
+            <circle cx="84" cy="22" r="8" fill="#9B59B6" opacity="0.9"/>
+            <circle cx="84" cy="22" r="5.5" fill="white"/>
+            <line x1="84" y1="22" x2="84" y2="18" stroke="#9B59B6" stroke-width="1.5" stroke-linecap="round"/>
+            <line x1="84" y1="22" x2="87" y2="22" stroke="#9B59B6" stroke-width="1" stroke-linecap="round"/>
+            <text x="14" y="22" font-size="12">⭐</text>
+          </svg>
         </div>
-        <div style="display:flex;justify-content:space-between;margin-top:4px;font-size:0.7rem;font-weight:800;color:var(--muted);">
-          <span>0</span>
-          <span id="wpm-benchmark-range" style="color:var(--green);">53 – 111 WPM</span>
-          <span id="wpm-bar-max">150</span>
+
+        <div class="card-title" id="wpm-result-title" style="font-size:1.4rem;margin-bottom:2px;">⏱ Your Timed Score!</div>
+        <div id="wpm-result-emoji" style="font-size:1rem;font-weight:800;color:var(--green);margin-bottom:4px;"></div>
+
+        <div class="wpm-result-big" id="wpm-result-number">0</div>
+        <div class="wpm-result-unit">Words Per Minute</div>
+        <div id="wpm-read-summary" style="font-size:0.92rem;font-weight:800;color:var(--muted);margin-top:6px;"></div>
+        <div id="wpm-improvement-badge"></div>
+
+        <!-- Visual benchmark bar -->
+        <div id="wpm-visual-benchmark" style="margin:16px 0 8px;">
+          <div class="wpm-benchmark-label" id="wpm-benchmark-label" style="margin-bottom:6px;">1st Grade Goal</div>
+          <div style="position:relative;height:32px;background:var(--section);border-radius:16px;overflow:visible;margin:0 4px;">
+            <div id="wpm-goal-range-bar" style="position:absolute;top:0;height:100%;background:linear-gradient(90deg, #C8E6C9, #81C784);border-radius:16px;"></div>
+            <div id="wpm-score-marker" style="position:absolute;top:-6px;width:4px;height:44px;background:var(--purple);border-radius:4px;transition:left 0.8s cubic-bezier(0.34,1.56,0.64,1);"></div>
+          </div>
+          <div style="display:flex;justify-content:space-between;margin-top:4px;font-size:0.7rem;font-weight:800;color:var(--muted);">
+            <span>0</span>
+            <span id="wpm-benchmark-range" style="color:var(--green);">53 – 111 WPM</span>
+            <span id="wpm-bar-max">150</span>
+          </div>
         </div>
-      </div>
 
-      <!-- How WPM works — collapsible -->
-      <div id="wpm-explain-toggle" style="margin:12px 0 4px;">
-        <button id="btn-wpm-explain" style="background:none;border:2px dashed var(--border);border-radius:12px;padding:8px 16px;font-family:'Fredoka',sans-serif;font-weight:700;font-size:0.78rem;color:var(--muted);cursor:pointer;transition:all 0.2s;">📊 How is this calculated?</button>
-      </div>
-      <div id="wpm-explain-box" style="display:none;text-align:left;background:var(--section);border-radius:14px;padding:14px 16px;margin:8px 0;font-size:0.82rem;font-weight:700;color:var(--ink);line-height:1.5;">
-        <p style="margin:0 0 8px;"><strong>What is Words Per Minute (WPM)?</strong></p>
-        <p style="margin:0 0 8px;">WPM measures reading speed. Your child read out loud for 60 seconds, then tapped the last word they reached. The number of words read IS the WPM score.</p>
-        <p style="margin:0 0 8px;"><strong>The math:</strong> <span id="wpm-explain-math" style="color:var(--purple);">words in 60 sec = WPM</span></p>
-        <p style="margin:0 0 8px;"><strong>How schools measure this:</strong></p>
-        <p style="margin:0 0 4px;">ReadUp uses the <strong>same 60-second method</strong> as school assessments like <strong>DIBELS</strong>, <strong>AIMSweb</strong>, and <strong>AMIRA</strong>. Schools call this <strong>Oral Reading Fluency (ORF)</strong> or <strong>WCPM</strong> (Words Correct Per Minute).</p>
-        <p style="margin:0;font-size:0.75rem;color:var(--muted);font-style:italic;">Note: School assessments also subtract errors (mispronounced words). ReadUp counts total words reached — for official accuracy scoring, use your school's assessment tool.</p>
-      </div>
+        <!-- How WPM works — collapsible -->
+        <div id="wpm-explain-toggle" style="margin:12px 0 4px;">
+          <button id="btn-wpm-explain" style="background:none;border:2px dashed var(--border);border-radius:12px;padding:8px 16px;font-family:'Fredoka',sans-serif;font-weight:700;font-size:0.78rem;color:var(--muted);cursor:pointer;transition:all 0.2s;">📊 How is this calculated?</button>
+        </div>
+        <div id="wpm-explain-box" style="display:none;text-align:left;background:var(--section);border-radius:14px;padding:14px 16px;margin:8px 0;font-size:0.82rem;font-weight:700;color:var(--ink);line-height:1.5;">
+          <p style="margin:0 0 8px;"><strong>What is Words Per Minute (WPM)?</strong></p>
+          <p style="margin:0 0 8px;">WPM measures reading speed. Your child read out loud for 60 seconds, then tapped the last word they reached. The number of words read IS the WPM score.</p>
+          <p style="margin:0 0 8px;"><strong>The math:</strong> <span id="wpm-explain-math" style="color:var(--purple);">words in 60 sec = WPM</span></p>
+          <p style="margin:0 0 8px;"><strong>How schools measure this:</strong></p>
+          <p style="margin:0 0 4px;">ReadUp uses the <strong>same 60-second method</strong> as school assessments like <strong>DIBELS</strong>, <strong>AIMSweb</strong>, and <strong>AMIRA</strong>. Schools call this <strong>Oral Reading Fluency (ORF)</strong> or <strong>WCPM</strong> (Words Correct Per Minute).</p>
+          <p style="margin:0;font-size:0.75rem;color:var(--muted);font-style:italic;">Note: School assessments also subtract errors (mispronounced words). ReadUp counts total words reached — for official accuracy scoring, use your school's assessment tool.</p>
+        </div>
 
-      <div class="wpm-history" id="wpm-history-section"></div>
-      <button class="btn-main btn-coral" id="btn-wpm-retry" style="font-size:1.1rem;">⏱ Beat My Score!</button>
-      <button class="btn-main btn-green" id="btn-wpm-back-complete" style="margin-top:10px;font-size:1.1rem;">✅ Done</button>
+        <div class="wpm-history" id="wpm-history-section"></div>
+        <button class="btn-main btn-coral" id="btn-wpm-retry" style="font-size:1.1rem;">⏱ Beat My Score!</button>
+        <button class="btn-main btn-green" id="btn-wpm-back-complete" style="margin-top:10px;font-size:1.1rem;">✅ Done</button>
+      </div>
     </div>
   </div>
 
@@ -1762,7 +1792,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 <footer>
   <strong>ReadUp!</strong> &nbsp;|&nbsp; Made with 💛 for kids everywhere<br>
   <span class="foot-sub">A Transforming Youth, Inc. Program &nbsp;·&nbsp; ✨ Inspired by Kamryn &amp; Christopher II ✨</span><br>
-  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD P</span>
+  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD R</span>
 </footer>
 
 <!-- Fixed bottom bar for parent access -->
@@ -4521,6 +4551,32 @@ function showWPMResults(wpm, wordCount, elapsedSec) {
   }
 
   show('screen-wpm-results');
+
+  // Celebration! Confetti + motivational title based on performance
+  const bench2 = WPM_BENCHMARKS[S.grade] || WPM_BENCHMARKS['1'];
+  const titleEl = document.getElementById('wpm-result-title');
+  const emojiEl = document.getElementById('wpm-result-emoji');
+  if (wpm >= bench2.max) {
+    titleEl.textContent = '🌟 Superstar Reader!';
+    emojiEl.textContent = "You're above grade level — amazing!";
+    emojiEl.style.color = 'var(--green)';
+    setTimeout(() => launchConfetti(80, 'wpm-confetti-canvas'), 300);
+  } else if (wpm >= bench2.min) {
+    titleEl.textContent = '🎉 On Target!';
+    emojiEl.textContent = "You're right in the goal range — great work!";
+    emojiEl.style.color = 'var(--green)';
+    setTimeout(() => launchConfetti(50, 'wpm-confetti-canvas'), 300);
+  } else if (wpm >= bench2.min * 0.7) {
+    titleEl.textContent = '💪 Getting Closer!';
+    emojiEl.textContent = "Keep practicing — you're almost there!";
+    emojiEl.style.color = 'var(--purple)';
+    setTimeout(() => launchConfetti(25, 'wpm-confetti-canvas'), 300);
+  } else {
+    titleEl.textContent = '⏱ Nice Try!';
+    emojiEl.textContent = "Every read makes you faster — let's keep going!";
+    emojiEl.style.color = 'var(--orange)';
+    setTimeout(() => launchConfetti(15, 'wpm-confetti-canvas'), 300);
+  }
 }
 
 // WPM button handlers
@@ -4660,12 +4716,6 @@ document.getElementById('btn-timed-paste-go').addEventListener('click', () => {
 });
 document.getElementById('btn-timed-paste-back').addEventListener('click', () => {
   show('screen-timed-source');
-});
-
-// From story completion screen
-document.getElementById('btn-solo-wpm').addEventListener('click', () => {
-  wpmStandaloneMode = false;
-  startWPMRead();
 });
 
 // Instructions → Start countdown
@@ -4884,8 +4934,8 @@ function showReadComplete(readCount) {
 }
 
 // ── Confetti animation ───────────────────────────────────
-function launchConfetti(count) {
-  const canvas = document.getElementById('confetti-canvas');
+function launchConfetti(count, canvasId) {
+  const canvas = document.getElementById(canvasId || 'confetti-canvas');
   if (!canvas) return;
   const ctx = canvas.getContext('2d');
   canvas.width = canvas.offsetWidth * 2;
