--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 
   <!-- SCREEN: Pick (Kid Launchpad) -->
   <div class="screen active" id="screen-pick">
-    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD T</div>
+    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD U</div>
     <!-- Kid-Friendly Action Buttons -->
     <div style="display:flex;flex-direction:column;gap:12px;">
       <!-- Read a Story — ORANGE (primary action) -->
@@ -1674,7 +1674,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 
   <!-- SCREEN: WPM Timer (60-second timed reading) -->
   <div class="screen" id="screen-wpm-read">
-    <div class="card" style="position:relative;padding-bottom:40px;">
+    <div class="card" style="position:relative;padding-bottom:60px;">
       <!-- Small stop button in top-right corner -->
       <button id="btn-wpm-cancel" style="position:absolute;top:10px;right:10px;width:36px;height:36px;border-radius:50%;border:2px solid var(--border);background:var(--cream);font-size:1rem;cursor:pointer;display:flex;align-items:center;justify-content:center;z-index:5;color:var(--muted);">✕</button>
       <div style="text-align:center;">
@@ -1794,7 +1794,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 <footer>
   <strong>ReadUp!</strong> &nbsp;|&nbsp; Made with 💛 for kids everywhere<br>
   <span class="foot-sub">A Transforming Youth, Inc. Program &nbsp;·&nbsp; ✨ Inspired by Kamryn &amp; Christopher II ✨</span><br>
-  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD T</span>
+  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD U</span>
 </footer>
 
 <!-- Fixed bottom bar for parent access -->
